# legacy_diffable

./: README.md  atomic.ml  atomic.mli  diffable.ml  diffable.opam  diffable_intf.ml  diffable_streamable.ml  diffable_streamable.mli  dune  iso.ml  iso.mli  legacy_diffable.ml  legacy_diffable.opam  legacy_diffable_intf.ml  legacy_diffable_streamable.ml  legacy_diffable_streamable.mli  map.ml  map.mli  option.ml  option.mli  result.ml  result.mli  set.ml  set.mli  tuples.ml  tuples.mli
