opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/diffable"
bug-reports: "https://github.com/janestreet/diffable/issues"
dev-repo: "git+https://github.com/janestreet/diffable.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/diffable/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "4.10.0"}
  "core"
  "ppx_jane"
  "stored_reversed"
  "streamable"
  "dune"            {>= "2.0.0"}
]
synopsis: "An interface for diffs."
description: "
Diffable interface.
"
